# WordCards

./: .gitignore  .pylintrc  database.py  main.py  models.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1ca0495ab285_add_user_and_user_deck_tables.py  25c078a94915_initial_migration.py  55736bdcb908_added_deck_card_table.py  56855b121013_create_tables_card__deck__deck_card__.py  5d5ea2c14455_rename_card_id_to_pk.py  77817c3ababe_initial_migration.py  cc75be2563b4_add_card__deck__deck_card_tables.py  dad2a68b6d3a_added_deck_card_table.py  de8fe69ca3de_added_decks_table.py  f3eb2f855fa5_add_status_to_user_card.py
poetry_app/: pyproject.toml
wordcards/: config.py  database.py  main.py
wordcards/api/: app.py
wordcards/api/routers/: card.py  cards.py  cards_decks.py  deck.py  deck_card.py  decks.py  modes.py  user.py  user_card.py  user_deck.py
wordcards/api/services/: crud.py
wordcards/models/: __init__.py  card.py  card_deck.py  deck.py  deck_card.py  user.py  user_card.py  user_deck.py
wordcards/schemas/: answer.py  card.py  deck.py  deck_card.py  user.py  user_card.py  user_deck.py
wordcards/services/: card.py  cards.py  cards_decks.py  deck_card.py  decks.py  modes_methods.py  user.py  user_card.py  user_deck.py
